# mas-lab

./: .envrc  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  SECURITY.md  Taskfile.yml  config.yaml  mkdocs.yml  out  pyproject.toml  pyrightconfig.json  requirements-docs.txt
ctl/: README.md  pyproject.toml
ctl/docs/: architecture-v2-compose.md  developer-guide.md  user-guide.md
ctl/docs/schemas/: component-registry.yaml
ctl/tests/: conftest.py  test_benchmark_runner.py  test_bootstrap_context.py  test_chat_exit_code.py  test_cli_overlay_shape.py  test_collaboration_bindings.py  test_compose_pipeline.py  test_deployment_runtime_id.py  test_engine_factory.py  test_engine_tool_loop.py  test_exchange_log.py  test_infra_entries.py  test_manifest_load.py  test_manifest_observability_config.py  test_manifest_tools_bootstrap.py  test_mas_agent_merge.py  test_mas_session.py  test_native_jsonl_plugin.py  test_obs_flags_flavour_overlay.py  test_obs_transform.py  test_observability_loader.py  test_observability_per_agent_scoping.py  test_observability_pipeline_shared.py  test_operator_console.py  test_overlay_ref_resolve.py  test_params_sidecar.py  test_pattern_registry.py  test_placement_validate.py  test_protocol_hints.py  test_run_mas_compose.py  test_run_mas_hitl.py  test_schema_errors.py  test_session_flavour.py  test_session_observability_setup.py  test_spec_bindings_governance.py  test_validate_cli.py  test_workspace_env.py
lab/: .importlinter  README.md  pyproject.toml
lab/components/bench/: README.md  pyproject.toml
lab/components/content/: README.md  pyproject.toml
lab/components/controller/: .coveragerc  README.md  pyproject.toml
lab/components/core/: README.md  pyproject.toml
lab/docs/: benchmark-state-architecture.md  benchmark.md  cli-reference.md  contracts.md  designing-experiments.md  index.md  labs-going-further.md  labs-quickstart.md  multi-scenario-format.md  pipeline-processors.md  pipeline-steps.md  pipeline.md  replay-equivalence-checklist.md  user-guide.md
lab/tests/: test_benchmark.py  test_cli_extensions.py  test_demo_e2e.py  test_package_refs.py
lab/tests/benchmark/: test_ci_plot.py  test_compute_ci.py  test_dataset.py  test_discovery.py  test_experiment.py  test_mas_experiment_config.py  test_pipeline_resources.py  test_run_artifacts.py  test_run_discovery_and_kg_enrich.py  test_run_manager_list.py  test_run_manager_pointer.py  test_runner.py  test_schema_validation.py  test_storage.py
library-eval/: README.md  pyproject.toml
library-eval/tests/: test_integration.py
library-lab/: README.md  library.yaml  pyproject.toml
library-lab/docs/: developer-guide.md  user-guide.md
library-samples/: README.md  library.yaml  pyproject.toml
library-samples/aliases/: plugin-aliases.yaml
library-samples/apps/: README.md
library-samples/apps/qa-mas/: mas.yaml
library-samples/apps/test/: mas.yaml
library-samples/apps/trip-planner/: mas.yaml
library-samples/datasets/: arborian-network.yaml  benchmark.json  mas-necessity.json  mas-necessity.yaml  qa-agent-default.json  qa-reasoning-queries-100.json  trip-planner-benchmark-100.json
library-samples/datasets/generic/: qa-reasoning-queries.yaml
library-samples/datasets/trip-planner/: benchmark.json  lifecycle-queries.yaml  queries.yaml
library-samples/infra/: tool-providers.yaml
library-samples/overlays/: cot-moderator.yaml  cot.yaml  react-moderator.yaml  react.yaml  reflection-moderator.yaml  reflection.yaml  test-overlay.yaml
library-samples/overlays/governance/: hitl-on-tool.yaml
library-samples/scripts/: fix-nvidia-insomnia-remote.sh
library-samples/skills/answer-formatting/: SKILL.md
library-samples/tools/: README.md  __init__.py  get_attractions.tool.yaml  get_fares.py  get_trip_fares.py  memory_search.py  web-search.tool.yaml  web_search_tool.py
library-standard/: README.md  library.yaml  pyproject.toml
library-standard/docs/: developer-guide.md  user-guide.md
library-standard/tests/: test_boundary_handlers.py  test_export_layers.py  test_mock_llm.py  test_observability_native.py  test_otel_converter_graph.py  test_otel_plugin.py  test_otel_plugin_e2e.py  test_otel_replay.py  test_otel_topology.py  test_otel_topology_extra.py  test_tools.py  test_tutorial_03_observability.py
runtime/: README.md  pyproject.toml
runtime/docs/: agent-defaults.md  architectural-decisions.md  architecture-instrumentation.md  automaton-product-model.md  context-segmentation.md  contracts-reference.md  design-patterns.md  developer-guide.md  formal_model.aux  formal_model.tex  governance-policy-engine.md  index.md  mealy-envelope.md  mealy-machines-guide.md  mealy-product-formal-design.md  naming-standards.md  ontology-extensions.md  plugin-aliases.md  plugin-and-tool-authoring.md  plugin-flavours.md  plugin-registry-manifests.md  production-path.md  semantic-protocols.md  theoretical-contribution.md  trajectory-schema.md  user-guide.md
runtime/docs/contracts/: DESIGN_SPACE.md  (+1 more)
runtime/tests/: conftest.py  test_constants.py  test_context_chunks.py  test_context_source_contract.py  test_delegation_completion.py  test_dp_inject.py  test_flavour_manifest_load_rejects_infra_refs.py  test_flavour_overlay_merge.py  test_flavour_separation.py  test_gov_policy.py  test_gov_spec.py  test_in_turn_context.py  test_infra_manifest.py  test_infra_pipeline_bidirectional.py  test_ingress_step.py  test_kernel_parallel_tools.py  test_kernel_types.py  test_library_catalog.py  test_library_catalog_discovery.py  test_library_catalog_plugin_manifests.py  test_library_roots.py  test_library_roots_extra.py  test_llm_cache.py  test_llm_delegator.py  test_manifest_composition.py  test_manifest_context.py  test_manifest_tool_provider.py  test_mealy_envelope.py  test_model_access.py  test_obs_plugin_set.py  test_obs_transition.py  test_orchestrator_dp_loader.py  test_overlay_merge.py  test_package_refs_resolve.py  test_parallel_tools.py  test_plan_execute_plugin.py  test_plugin_decorator.py  test_registry.py  test_registry_aliases.py  test_registry_defaults.py  (+11 more)
(+1401 files in other folders)
