#  Copyright (c) 2026 Cisco Systems, Inc. and its affiliates
#  SPDX-License-Identifier: Apache-2.0
[project]
name = "mas-lab-workspace"
version = "0.1.0"
description = "MAS Lab workspace — v2 cutover (runtime, ctl, libraries)"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
dependencies = [
    "mas-runtime",
    "mas-lab",
    "mas-lab-controller",
    "mas-ctl",
    "mas-library-standard",
    "mas-library-samples",
    "mas-library-lab",
    "mas-library-eval",
    "pika>=1.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mas_lab_workspace"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio",
    "pytest-cov>=6.0",
    "pytest-timeout>=2.3",
    "import-linter>=2.0",
    "httpx>=0.27",
    "ruff>=0.15.0",
    "pyarrow>=14.0",
    "hypothesis>=6.0",
]
# Paper labs with optional backends (Letta memory scenarios):
#   uv sync --group labs-full
labs-full = [
    { include-group = "dev" },
    "letta>=0.11.0",
]

[tool.uv.workspace]
members = [
    "runtime",
    "ctl",
    "library-standard",
    "library-samples",
    "library-lab",
    "library-eval",
    "lab",
    "lab/components/core",
    "lab/components/bench",
    "lab/components/controller",
    "lab/components/content",
]

[tool.uv.sources]
mas-runtime = { workspace = true }
mas-ctl         = { workspace = true }
mas-library-standard = { workspace = true }
mas-library-samples  = { workspace = true }
mas-library-lab      = { workspace = true }
mas-library-eval     = { workspace = true }
mas-lab         = { workspace = true }
mas-lab-core    = { workspace = true }
mas-lab-bench   = { workspace = true }
mas-lab-controller = { workspace = true }
mas-lab-content = { workspace = true }
[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "ctl/tests", "runtime/tests", "lab/components/controller/tests", "lab/components/content/tests"]
markers = [
    "timeout: per-test timeout (pytest-timeout)",
]

[tool.coverage.run]
source = [
    "mas.lab.controller",
    "mas.lab.runners",
    "mas.runtime.kernel",
    "mas.runtime.machines",
    "mas.ctl.workspace",
]
omit = [
    # PR #5 FastAPI surface — route-tested in test_fastapi_*.py (separate report)
    "*/fastapi_app.py",
    "*/http_server.py",
    "*/cli.py",
    "*/__main__.py",
]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_empty = true
