#  Copyright (c) 2026 Cisco Systems, Inc. and its affiliates
#  SPDX-License-Identifier: Apache-2.0
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mas-ctl"
version = "0.1.0"
description = "MAS control plane V2 — compose, session, placement"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "mas-runtime",
    "click>=8.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "jsonschema>=4.0",
    "httpx>=0.27",
    "certifi>=2024.0",
]

[project.urls]
Homepage = "https://github.com/outshift-open/mas-lab"
Issues = "https://github.com/outshift-open/mas-lab/issues"

[project.optional-dependencies]
curses = [
    "windows-curses>=2.3.2; sys_platform == 'win32'",
]
dev = [
    "pytest>=8.0",
    "import-linter>=2.0",
]

[project.scripts]
mas-ctl = "mas.ctl.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mas"]
# Test-support helpers (mas.ctl.testing) are used only by the repo test suite and
# tutorial scenario scripts; they are not part of the public runtime surface and
# are excluded from the published wheel.
exclude = ["src/mas/ctl/testing/**"]

[tool.uv.sources]
mas-runtime = { workspace = true }
