#  Copyright (c) 2026 Cisco Systems, Inc. and its affiliates
#  SPDX-License-Identifier: Apache-2.0
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mas-lab"
version = "0.1.0"
description = "MAS Lab — Multi-Agent System experimentation, benchmarking, and analysis toolkit."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "MAS Framework Contributors"}]
keywords = ["agents", "multi-agent", "benchmark", "evaluation", "observability"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "mas-runtime",
    "mas-ctl",
    "mas-lab-core",
    "mas-lab-bench",
    "mas-lab-controller",
    "mas-library-eval",
    "jsonschema>=4.26.0",
]

[project.optional-dependencies]
all = [
    "letta>=0.11.0",
]
extensions = [
    "letta>=0.11.0",
]
[project.urls]
Homepage = "https://github.com/outshift-open/mas-lab"
Documentation = "https://github.com/outshift-open/mas-lab/tree/main/docs"
Issues = "https://github.com/outshift-open/mas-lab/issues"

[project.scripts]
mas-lab = "mas.lab.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/mas"]
