#  Copyright (c) 2026 Cisco Systems, Inc. and its affiliates
#  SPDX-License-Identifier: Apache-2.0
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mas-library-lab"
version = "0.1.0"
description = "MAS Lab provider library with public eval plugins."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "MAS Framework Contributors"}]
dependencies = [
    "mas-lab",
]

[project.entry-points."mas.lab.eval.plugins"]
mcev1 = "mas.library.lab.eval.mcev1:MCEv1Provider"

[project.entry-points."mas.runtime.manifest_libraries"]
lab = "mas.library.lab"

[tool.hatch.build.targets.wheel]
packages = ["src/mas"]

[tool.hatch.build.targets.wheel.force-include]
"library.yaml" = "mas/library/lab/library.yaml"
