#  Copyright (c) 2026 Cisco Systems, Inc. and its affiliates
#  SPDX-License-Identifier: Apache-2.0
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mas-runtime"
version = "0.1.0"
description = "MAS Runtime V2 — Mealy kernel (embeddable library)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "certifi>=2024.0",
    "truststore>=0.10",
    "PyYAML>=6.0",
    "jsonschema>=4.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/outshift-open/mas-lab"
Issues = "https://github.com/outshift-open/mas-lab/issues"

[project.optional-dependencies]
grpc = [
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
mas-runtime = "mas.runtime.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mas"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
norecursedirs = [".git", "node_modules", "pending_port"]
