#  Copyright (c) 2026 Cisco Systems, Inc. and its affiliates
#  SPDX-License-Identifier: Apache-2.0
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mas-lab-bench"
version = "0.1.0"
description = "Benchmark engine, pipeline execution, plots and validation for MAS Lab."
requires-python = ">=3.11"
license = {text = "Apache-2.0"}

dependencies = [
    "mas-lab-core",
    "mas-library-eval",
    "mas-runtime",
    "mas-ctl",
    "jsonschema>=4.0",
    "click>=8.0",
    "openai>=1.0.0",
    "pandas>=2.0.0",
    "plotnine>=0.12.0",
    "scipy>=1.10.0",
    "psutil>=5.9.0",
    "playwright>=1.40",
    # MCE evaluation metrics are provided by mas-library-eval (workspace member)
]

[tool.hatch.build.targets.wheel]
packages = ["src/mas"]

[project.entry-points."mas.lab.runners"]
mas = "mas.lab.benchmark.plugins.mas:MasRuntimeRunner"
