#  Copyright (c) 2026 Cisco Systems, Inc. and its affiliates
#  SPDX-License-Identifier: Apache-2.0
[project]
name = "mas-lab-content"
version = "0.1.0"
description = "Shared content engine — markdown with widget directives, themes, and multi-mode rendering"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "MAS Framework Contributors"}]
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mas"]
