#  Copyright (c) 2026 Cisco Systems, Inc. and its affiliates
#  SPDX-License-Identifier: Apache-2.0
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mas-lab-core"
version = "0.1.0"
description = "Core contracts, telemetry, schemas and utilities shared across MAS Lab components."
requires-python = ">=3.11"
license = {text = "Apache-2.0"}

dependencies = [
    "mas-runtime",
    "pyyaml>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mas"]

[project.entry-points."mas.lab.controller.plugins"]
local-inproc = "mas.lab.controllers.local_inproc:LocalInprocController"
